--- a/add/css/main.css
+++ b/add/css/main.css
@@ -119,7 +119,7 @@ button,input {
 }
 .header{
     padding-top: 12px;
-    background: url(../img/_DSC0569 1.png) no-repeat;
+    background: url(../img/_DSC0569.png) no-repeat;
     background-size: 115%;
 }
 .nav-bar{
